# agentgateway

./: Cargo.toml  Dockerfile  go.mod  go.sum
.github/workflows/: pull_request.yml
controller/: Makefile
controller/api/: README.md
controller/api/settings/: settings.go  settings_test.go
controller/api/v1alpha1/agentgateway/: agentgateway_backend_types.go  agentgateway_policy_types.go  ai_policy.go  zz_generated.deepcopy.go
controller/api/v1alpha1/shared/: shared_types.go
controller/hack/: generate.sh
controller/hack/crdgen/: main.go
controller/pkg/controller/: start_internal_test.go
controller/pkg/deployer/: gateway_parameters.go  values_helpers.go
controller/pkg/setup/: setup.go
controller/test/deployer/: deployer_helm.go  internal_helm_test.go
crates/agentgateway-app/: Cargo.toml
crates/agentgateway-app/src/: lib.rs  main.rs
crates/agentgateway-app/tests/: app.rs
crates/agentgateway/src/: app.rs  serdes.rs
crates/celx/src/: strings.rs
crates/core/src/: readiness.rs  telemetry.rs
crates/hyper-util-fork/: Cargo.toml
crates/hyper-util-fork/src/: lib.rs
crates/hyper-util-fork/src/client/: mod.rs
crates/hyper-util-fork/src/client/legacy/: client.rs  mod.rs  pool.rs
crates/hyper-util-fork/src/client/legacy/connect/: mod.rs
crates/hyper-util-fork/src/common/: mod.rs
crates/xtask/src/: schema.rs
examples/mcp-authentication/: config.yaml
examples/ratelimiting/global/: README.md  config.yaml
schema/: README.md  cel-functions.md  cel.json  cel.md  config.json  config.md
ui/: package-lock.json  package.json
(+94 files in other folders)
